example/src/main/webapp/WEB-INF/views/error/403.html.mustache
<h3>403 Forbidden</h3>
<hr/>

<p>
Forbidden.
</p>
